--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,7 @@ include_directories(libs)
 add_subdirectory(src)
 add_executable(charly src/main.cpp)
 target_link_libraries(charly libcharly)
+target_link_libraries(charly readline)
 target_include_directories(charly PRIVATE src)
 target_compile_features(charly PRIVATE cxx_std_17)
 target_compile_options(charly PRIVATE -Wall -Wextra -Wpedantic -Werror -Wno-vla-extension)
