--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,6 +49,7 @@ if(Catch2_FOUND)
   target_link_libraries(tests Catch2::Catch2)
   target_link_libraries(tests libcharly)
   target_include_directories(tests PRIVATE src)
+  target_include_directories(tests PRIVATE SYSTEM /usr/include)
   target_compile_features(tests PRIVATE cxx_std_17)
   target_compile_options(tests PRIVATE -Wall -Wextra -Wpedantic -Werror -Wno-vla-extension)
 else()
