--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,7 +29,7 @@ target_link_libraries(charly libcharly)
 target_link_libraries(charly readline)
 target_include_directories(charly PRIVATE src)
 target_compile_features(charly PRIVATE cxx_std_17)
-target_compile_options(charly PRIVATE -Wall -Wextra -Wpedantic -Werror -Wno-vla-extension)
+target_compile_options(charly PRIVATE -Wall -Wextra -Wpedantic -Werror -Wno-vla-extension -Wno-c++20-designator)
 
 # install to global folder
 install(TARGETS charly RUNTIME DESTINATION bin)
@@ -51,7 +51,7 @@ if(Catch2_FOUND)
   target_include_directories(tests PRIVATE src)
   target_include_directories(tests PRIVATE SYSTEM /usr/include)
   target_compile_features(tests PRIVATE cxx_std_17)
-  target_compile_options(tests PRIVATE -Wall -Wextra -Wpedantic -Werror -Wno-vla-extension)
+  target_compile_options(tests PRIVATE -Wall -Wextra -Wpedantic -Werror -Wno-vla-extension -Wno-c++20-designator)
 else()
   message("-- Could not find 'Catch2' library, omitting build target 'tests'")
 endif()
