--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,5 +7,5 @@ file(GLOB charlycore_SRC
 add_library(libcharly ${charlycore_SRC})
 target_include_directories(libcharly PRIVATE "./")
 target_compile_features(libcharly PRIVATE cxx_std_17)
-target_compile_options(libcharly PRIVATE -Wall -Wextra -Wpedantic -Werror -Wno-vla-extension)
+target_compile_options(libcharly PRIVATE -Wall -Wextra -Wpedantic -Werror -Wno-vla-extension -Wno-c++20-designator)
 set_target_properties(libcharly PROPERTIES PREFIX "")
