--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -14,14 +14,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - name: Checkout repository and submodules
+      uses: actions/checkout@v2
+      with:
+        submodules: recursive
 
-    - name: Install Catch2 Dependency
-      run: sudo apt-get install catch
-
-    - name: Link Catch2 Dependency
-      working-directory: /usr/include
-      run: sudo ln -s catch catch2
 
     - name: Create Build Environment
       # Some projects don't allow in-source building, so create a separate build directory
