--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "libs/Catch2"]
-	path = libs/Catch2
+[submodule "libs/catch2"]
+	path = libs/catch2
 	url = https://github.com/catchorg/Catch2
