--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,12 +10,6 @@ if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
   set(APPLE TRUE)
 endif()
 
-if(APPLE)
-  include_directories(SYSTEM /usr/local/include)
-else()
-  include_directories(SYSTEM /usr/include)
-endif()
-
 # public headers
 include_directories(include)
 
@@ -27,6 +21,7 @@ add_subdirectory(src)
 add_executable(charly src/main.cpp)
 target_link_libraries(charly libcharly)
 target_link_libraries(charly readline)
+target_link_libraries(charly stdc++)
 target_include_directories(charly PRIVATE src)
 target_compile_features(charly PRIVATE cxx_std_17)
 target_compile_options(charly PRIVATE -Wall -Wextra -Wpedantic -Werror -Wno-vla-extension -Wno-c++20-designator)
@@ -35,18 +30,17 @@ target_compile_options(charly PRIVATE -Wall -Wextra -Wpedantic -Werror -Wno-vla-
 install(TARGETS charly RUNTIME DESTINATION bin)
 
 # unit tests
-add_subdirectory(libs/Catch2)
+add_subdirectory(libs/catch2)
 
 file(GLOB tests_SRC
-  "test/runtime/main.cpp"
   "test/runtime/utils/*.cpp"
   "test/runtime/core/compiler/*.cpp"
 )
 
 add_executable(tests ${tests_SRC})
-target_link_libraries(tests Catch2::Catch2)
+target_link_libraries(tests Catch2::Catch2WithMain)
 target_link_libraries(tests libcharly)
+target_link_libraries(tests stdc++)
 target_include_directories(tests PRIVATE src)
-target_include_directories(tests PRIVATE SYSTEM /usr/include)
 target_compile_features(tests PRIVATE cxx_std_17)
 target_compile_options(tests PRIVATE -Wall -Wextra -Wpedantic -Werror -Wno-vla-extension -Wno-c++20-designator)
