--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,7 +1,11 @@
 file(GLOB charlycore_SRC
-  "charly/core/*.cpp"
-  "charly/core/compiler/*.cpp"
-  "charly/core/compiler/passes/*.cpp"
+  "charly/core/compiler.cpp"
+  "charly/core/compiler/ast.cpp"
+  "charly/core/compiler/diagnostic.cpp"
+  "charly/core/compiler/lexer.cpp"
+  "charly/core/compiler/parser.cpp"
+  "charly/core/compiler/passes/duplicates_check.cpp"
+  "charly/core/compiler/passes/reserved_identifiers_check.cpp"
 )
 
 
