--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,6 +7,7 @@ file(GLOB charlycore_SRC
   "charly/core/compiler/passes/class_constructor_check.cpp"
   "charly/core/compiler/passes/duplicates_check.cpp"
   "charly/core/compiler/passes/reserved_identifiers_check.cpp"
+  "charly/core/compiler/passes/desugar_pass.cpp"
 )
 
 
