--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,11 +4,13 @@ file(GLOB charlycore_SRC
   "charly/core/compiler/diagnostic.cpp"
   "charly/core/compiler/lexer.cpp"
   "charly/core/compiler/parser.cpp"
+  "charly/core/compiler/localvars.cpp"
   "charly/core/compiler/passes/grammar_validation_check.cpp"
   "charly/core/compiler/passes/class_constructor_check.cpp"
   "charly/core/compiler/passes/duplicates_check.cpp"
   "charly/core/compiler/passes/reserved_identifiers_check.cpp"
   "charly/core/compiler/passes/desugar_pass.cpp"
+  "charly/core/compiler/passes/local_allocator_pass.cpp"
 )
 
 
