Basic bytecode codegeneration infrastructure

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -12,6 +12,8 @@ file(GLOB charlycore_SRC
   "charly/core/compiler/passes/desugar_pass.cpp"
   "charly/core/compiler/passes/local_allocator_pass.cpp"
   "charly/core/compiler/passes/constant_folding_pass.cpp"
+  "charly/core/compiler/ir/builder.cpp"
+  "charly/core/compiler/codegenerator.cpp"
 )
 
 
