Refactored bytecode builder

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -13,6 +13,7 @@ file(GLOB charlycore_SRC
   "charly/core/compiler/passes/local_allocator_pass.cpp"
   "charly/core/compiler/passes/constant_folding_pass.cpp"
   "charly/core/compiler/ir/builder.cpp"
+  "charly/core/compiler/ir/ir.cpp"
   "charly/core/compiler/codegenerator.cpp"
 )
 
@@ -24,7 +25,13 @@ target_link_libraries(libcharly readline)
 target_include_directories(libcharly PRIVATE "./")
 target_compile_features(libcharly PRIVATE cxx_std_17)
 target_compile_options(libcharly PRIVATE
-  -Wall -Wextra -Wpedantic -Werror -Wno-vla-extension -Wno-c++20-designator
-  -ferror-limit=5
+  -Wall
+  -Wextra
+  -Wpedantic
+  -Werror
+  -Wno-vla-extension
+  -Wno-c++20-designator
+  -Wno-gnu-zero-variadic-macro-arguments
+  # -ferror-limit=5
 )
 set_target_properties(libcharly PROPERTIES PREFIX "")
