--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,8 +23,13 @@ target_link_libraries(charly libcharly)
 target_include_directories(charly PRIVATE src)
 target_compile_features(charly PRIVATE cxx_std_17)
 target_compile_options(charly PRIVATE
-  -Wall -Wextra -Wpedantic -Werror -Wno-vla-extension -Wno-c++20-designator
-  -ferror-limit=5
+  -Wall
+  -Wextra
+  -Wpedantic
+  -Werror
+  -Wno-vla-extension
+  -Wno-c++20-designator
+  -Wno-gnu-zero-variadic-macro-arguments
 )
 
 # install to global folder
@@ -47,4 +52,12 @@ target_link_libraries(tests Catch2::Catch2WithMain)
 target_link_libraries(tests libcharly)
 target_include_directories(tests PRIVATE src)
 target_compile_features(tests PRIVATE cxx_std_17)
-target_compile_options(tests PRIVATE -Wall -Wextra -Wpedantic -Werror -Wno-vla-extension -Wno-c++20-designator)
+target_compile_options(tests PRIVATE
+  -Wall
+  -Wextra
+  -Wpedantic
+  -Werror
+  -Wno-vla-extension
+  -Wno-gnu-zero-variadic-macro-arguments
+  -Wno-c++20-designator
+)
