--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -14,6 +14,7 @@ jobs:
       run:  |
             sudo apt update
             sudo apt install clang-10
+            sudo apt install libboost-all-dev
       shell: bash
 
     - name: Checkout repository and submodules
