--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -20,6 +20,8 @@ file(GLOB charlycore_SRC
   "charly/core/compiler/passes/reserved_identifiers_check.cpp"
   "charly/core/runtime/scheduler.cpp"
   "charly/core/runtime/worker.cpp"
+  "charly/core/runtime/gc.cpp"
+  "charly/core/runtime/gcworker.cpp"
   "charly/taggedvalue.cpp"
   "charly/utils/argumentparser.cpp"
   "charly/utils/buffer.cpp"
