--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -21,6 +21,7 @@ file(GLOB charlycore_SRC
   "charly/core/runtime/gc.cpp"
   "charly/core/runtime/allocator.cpp"
   "charly/core/runtime/scheduler.cpp"
+  "charly/core/runtime/compiled_module.cpp"
   "charly/taggedvalue.cpp"
   "charly/utils/argumentparser.cpp"
   "charly/utils/buffer.cpp"
@@ -48,6 +49,7 @@ target_compile_options(libcharly PRIVATE
   -Wno-vla-extension
   -Wno-c++20-designator
   -Wno-gnu-zero-variadic-macro-arguments
+  -Wno-c99-extensions
   -Wno-register
   -ftemplate-backtrace-limit=8
   -march=native
