Toggle dump modes in REPL

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,6 +31,7 @@ target_compile_options(charly PRIVATE
   -Wno-c++20-designator
   -Wno-gnu-zero-variadic-macro-arguments
   -Wno-c99-extensions
+  -Wno-register
   -ftemplate-backtrace-limit=8
   -march=native
   -flto
@@ -64,9 +65,10 @@ target_compile_options(tests PRIVATE
   -Wpedantic
   -Werror
   -Wno-vla-extension
+  -Wno-c++20-designator
   -Wno-gnu-zero-variadic-macro-arguments
   -Wno-c99-extensions
-  -Wno-c++20-designator
+  -Wno-register
   -ftemplate-backtrace-limit=8
   -march=native
   -flto
