--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,6 +49,7 @@ file(GLOB tests_SRC
   "test/runtime/core/compiler/parser.cpp"
   "test/runtime/core/compiler/pass.cpp"
   "test/runtime/core/compiler/semantic.cpp"
+  "test/runtime/core/compiler/module.cpp"
   "test/runtime/utils/buffer.cpp"
   "test/runtime/utils/cast.cpp"
   "test/runtime/utils/taggedvalue.cpp"
