--- a/.rgignore
+++ b/.rgignore
@@ -1,8 +1,16 @@
-bin/
-libs/
-test/
-experiments/
-build_backup/
+*.dSYM
+*.lib
+*.swo
+*.swp
+.DS_Store
 .git/
+bin/
+build/
+build_backup/
+buildrelease/
+buildtest/
 code.profdata
 default.profraw
+experiments/
+libs/
+test/
