--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,8 +1,8 @@
 file(GLOB charlycore_SRC
   "charly/charly.cpp"
-  "charly/core/compiler/compiler.cpp"
   "charly/core/compiler/ast.cpp"
   "charly/core/compiler/codegenerator.cpp"
+  "charly/core/compiler/compiler.cpp"
   "charly/core/compiler/diagnostic.cpp"
   "charly/core/compiler/ir/assembler.cpp"
   "charly/core/compiler/ir/builder.cpp"
@@ -21,12 +21,13 @@ file(GLOB charlycore_SRC
   "charly/core/runtime/compiled_module.cpp"
   "charly/core/runtime/gc.cpp"
   "charly/core/runtime/heap.cpp"
+  "charly/core/runtime/interpreter.cpp"
+  "charly/core/runtime/processor.cpp"
   "charly/core/runtime/runtime.cpp"
   "charly/core/runtime/scheduler.cpp"
   "charly/core/runtime/thread.cpp"
-  "charly/core/runtime/interpreter.cpp"
   "charly/core/runtime/worker.cpp"
-  "charly/core/runtime/processor.cpp"
+  "charly/handle.cpp"
   "charly/utils/argumentparser.cpp"
   "charly/utils/buffer.cpp"
   "charly/value.cpp"
