--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -40,7 +40,7 @@ add_library(libcharly ${charlycore_SRC})
 if (Boost_FOUND)
   target_include_directories(libcharly PRIVATE ${Boost_INCLUDE_DIRS})
   target_link_libraries(libcharly Boost::context)
-endif(Boost_FOUND)
+endif()
 target_link_libraries(libcharly stdc++)
 target_link_libraries(libcharly m)
 target_link_libraries(libcharly readline)
