--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -63,5 +63,7 @@ target_compile_options(libcharly PRIVATE
   -march=native
   -flto
 )
-set_target_properties(libcharly PROPERTIES LINK_FLAGS -fuse-ld=lld)
-set_target_properties(libcharly PROPERTIES PREFIX "")
+if(NOT APPLE)
+  set_target_properties(libcharly PROPERTIES LINK_FLAGS -fuse-ld=lld)
+  set_target_properties(libcharly PROPERTIES PREFIX "")
+endif()
