utils::Buffer now implements basic_streambuf

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -30,6 +30,7 @@ file(GLOB charlycore_SRC
   "charly/handle.cpp"
   "charly/utils/argumentparser.cpp"
   "charly/utils/buffer.cpp"
+  "charly/utils/allocator.cpp"
   "charly/value.cpp"
   "libs/termcolor/termcolor.cpp"
 )
