Refactored thread timeslice interrupt mechanism
A background watchdog thread runs every 10 milliseconds (current thread timeslice length) and updates its own clock. We then iterate through all active workers and check if any threads exceeded their timeslice. If they did, an atomic exchange attempts to set their last scheduled timestamp field to some predefined constant, signalling that the thread should yield back to the scheduler.

This mechanism removes the need for threads to call the get_steady_timestamp method during each checkpoint. Since the checkpoint method executes on every memory allocation and charly function call, this removes a considerable overhead.

Profiling suggested that before the change, a lot of time was spent in the has_exceeded_timeslice method, just retrieving timestamps. I'm not entirely sure if getting the current timestamp invokes a syscall, but if it does, that would explain the overhead.

After this change, only the watchdog periodically retrieves a timestamp, massively reducing the overhead and moving it off the worker threads. Some random benchmarks and profiling suggests this resulted in a 15% throughput improvement over all code.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -25,6 +25,7 @@ file(GLOB charlycore_SRC
         "charly/core/runtime/processor.cpp"
         "charly/core/runtime/runtime.cpp"
         "charly/core/runtime/scheduler.cpp"
+        "charly/core/runtime/watchdog.cpp"
         "charly/core/runtime/thread.cpp"
         "charly/core/runtime/worker.cpp"
         "charly/core/runtime/builtins/core.cpp"
