Basic naive implementation of dynamic lists
Basic but inefficient support for concurrent access and modification. Still some bugs and inconsitencies left.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -30,6 +30,7 @@ file(GLOB charlycore_SRC
         "charly/core/runtime/worker.cpp"
         "charly/core/runtime/builtins/core.cpp"
         "charly/core/runtime/builtins/future.cpp"
+        "charly/core/runtime/builtins/list.cpp"
         "charly/core/runtime/builtins/readline.cpp"
         "charly/handle.cpp"
         "charly/utils/argumentparser.cpp"
