--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -2,9 +2,6 @@ name: Unit Test
 
 on: [push]
 
-env:
-  BUILD_TYPE: Release
-
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -23,23 +20,9 @@ jobs:
         ref: 'rewrite'
         submodules: recursive
 
-    - name: Create Build Environment
-      run: cmake -E make_directory ${{github.workspace}}/build
-
-    - name: Configure CMake
-      shell: bash
-      working-directory: ${{github.workspace}}/build
-      run: cmake $GITHUB_WORKSPACE -DCMAKE_BUILD_TYPE=$BUILD_TYPE
-      env:
-        CC: clang-10
-        CXX: clang-10
-
-    - name: Build
-      working-directory: ${{github.workspace}}/build
-      shell: bash
-      run: cmake --build . --config $BUILD_TYPE --target tests -j2
-
     - name: Test
-      working-directory: ${{github.workspace}}/build
+      working-directory: ${{github.workspace}}
       shell: bash
-      run: ./tests
+      run: ./tests.sh
+      env:
+        CHARLYVMDIR: ${{github.workspace}}
