--- a/.gitignore
+++ b/.gitignore
@@ -11,5 +11,6 @@ cmake-build-debug
 cmake-build-minsizerel
 cmake-build-release
 cmake-build-relwithdebinfo
+cmake-build-relwithdebinfo-coverage
 code.profdata
 default.profraw
